	3.1.4.1	5/31/2014
				Added support for a release level version, ex. '3.1.4 BETA 2'.
	3.1.5	6/12/2014
				Changes:
					Changed to use UUID player look-up and verification, whenever possible.
					Changed to loading the default locale file with a Reader type, instead of an InputStream.
					Database:
						Added a 'SenderUUID' column.
						Added a 'ReportedUUID' column.
						Added a 'ClaimedByUUID' column.
						Added a 'CompletedByUUID' column.
						Removed the 'SenderRaw' column.
						Removed the 'ReportedRaw' column.
						Removed the 'ClaimedByRaw' column.
						Removed the 'CompletedByRaw' column.
						Changed the 'Sender' column to 16 characters.
						Changed the 'Reported' column to 16 characters.
						Changed the 'ClaimedBy' column to 16 characters.
						Changed the 'CompletedBy' column to 16 characters.
	3.1.6	6/20/2014
				Fixed a null pointer exception when trying to match a name to an offline player.
	3.1.7	7/4/2014
				Database Changes:
					Changed the 'Sender' column to 32 characters.
					Changed the 'Reported' column to 32 characters.
					Changed the 'ClaimedBy' column to 32 characters.
					Changed the 'CompletedBy' column to 32 characters.
					Changed the 'Date' column from a VARCHAR type to a CHAR type.
					Changed the 'SenderUUID' column from a VARCHAR type to a CHAR type.
					Changed the 'ReportedUUID' column from a VARCHAR type to a CHAR type.
					Changed the 'ClaimedByUUID' column from a VARCHAR type to a CHAR type.
					Changed the 'CompletedByUUID' column from a VARCHAR type to a CHAR type.
					Changed the 'ClaimedDate' column from a VARCHAR type to a CHAR type.
					Changed the 'CompletionDate' column from a VARCHAR type to a CHAR type.
	3.1.8	8/1/2014
				Fixed trying to find a player even if the username is invalid.
	3.2
				Features:
					An alert will be sent when a reported player from an unfinished report logs in.
				New Permission Nodes:
					reporter.alerts.onLogin.reportedPlayerLogin